PDB-1585 - Can't tie a dashboard prompt to a content's parameter - UI doesn't show dropdown * Poor man fix - removes the horizontal cell paddings that mess-up the layout of the gwt-ScrollTable and prevent the user from seeing the drop-down arrow;    restores functionality at the cost of appearence. * What's happening is that the the way that the gwt widget CustomListBox is using a style="100%" attribute in its top-level element. * The CustomListBox control is within a td of "#propertiesPanelParameterAssignmentTable .gwt-ScrollTable" - the GWT/HTML representation of a XUL <tree> (of ddMainFrame.xul). * The styles in the globalCrystal.css are applying paddings to the td -> 100% + 20px padding -> causes the drop-down arrow to appear of the cell. * Fixing this right would require removing the fixed style="width:100%" that is being set somewhere in GWT code???, and applying that as a default in CSS instead    (.custom-list: { width: 100%; }    Then as a CSS override to this CustomListBox only, { left:0px, right:0px; } along with the desired padding.    Also, to be able to correctly apply paddings to the table headers' text, without unwantedly enlarging the table width,    each header text would need to be wrapped in a block element, and margins to it applied instead.

--- a/pentaho-gwt-widgets/src/org/pentaho/gwt/widgets/themes/public/themes/onyx/globalOnyx.css
+++ b/pentaho-gwt-widgets/src/org/pentaho/gwt/widgets/themes/public/themes/onyx/globalOnyx.css
@@ -2612,9 +2612,14 @@ input:focus {
 }
 #contentLinkingAssignmentTable .gwt-ScrollTable .headerTable td,
 #propertiesPanelParameterAssignmentTable .gwt-ScrollTable .headerTable td {
-  padding: 8px 10px 6px 10px;
+  padding: 8px 0px 6px 0px;
   height: 20px;
   font-size: 14px;
+}
+#contentLinkingAssignmentTable .gwt-ScrollTable .dataTable>tbody>tr>td,
+#propertiesPanelParameterAssignmentTable .gwt-ScrollTable .dataTable>tbody>tr>td {
+    padding-left:  0px;
+    padding-right: 0px;
 }
 .IE .headerTable td {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#FF777777', endColorstr = '#FF000000');
